--- a/flask_work2/application/templates/about.html
+++ b/flask_work2/application/templates/about.html
@@ -2,6 +2,6 @@
 {% extends "layout.html" %}
 {% block body_content %}
     <h1>About Page</h1>
-    <p>This web app is made using Flask!</p>
+    <p>This is the Ultimate Blog!!!</p>
 {% endblock body_content %}
 </html>
