--- a/flask_work2/application/templates/layout.html
+++ b/flask_work2/application/templates/layout.html
@@ -10,6 +10,7 @@
                 <a href="{{ url_for('about') }}">About</a>
                 <a href="{{ url_for('post') }}">Post</a>
                 <a href="{{ url_for('account') }}">Account</a>
+                <a href="{{ url_for('storage') }}">Storage</a>
                 <a href="{{ url_for('logout') }}">Logout</a>
             {% else %}
                 <a href="{{ url_for('home') }}">Home</a>
